Flask update to Part 3

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,21 @@
             </div>
         </div>
         <hr>
+        <div>
+            Peaks and Troughs:
+            <a href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('login') }}">Login</a>
+        </div>
+        <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
         {% block content %}{% endblock %}
     </body>
 
