--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,12 +2,16 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>{{ ('Sign In') }}</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+    <section>
+        <div class="container">
+            <h1 class="text-center">{{ ('Sign In') }}</h1>
+            <div class="row justify-content-center">
+                <div class="col-md-4">
+                    {{ wtf.quick_form(form) }} <!-- https://pythonhosted.org/Flask-Bootstrap/forms.html -->
+                </div>
+            </div>
+            <br>
+            <p class="text-center">{{ ('New User?') }} <a href="{{ url_for('register') }}">{{ ('Click to Register!') }}</a></p>
         </div>
-    </div>
-    <br>
-    <p>{{ ('New User?') }} <a href="{{ url_for('register') }}">{{ ('Click to Register!') }}</a></p>
+    </section>
 {% endblock %}
