--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,8 +2,8 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>{{ ('Register') }}</h1>
-    <div class="row">
+    <h1 class="text-center">{{ ('Register') }}</h1>
+    <div class="row justify-content-center">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
         </div>
