routes and models update

--- a/app/templates/learn.html
+++ b/app/templates/learn.html
@@ -47,6 +47,13 @@
         </div>
     </section>
 
+    <section>
+        <div class="container text-center">
+            <a href="{{ url_for('assessment') }}">
+                <button type="button" class="btn btn-primary btn-lg">Attempt Assessment</button>
+            </a>
+        </div>
+    </section>
 
 
 {% endblock %}
