--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,11 @@
               			<a class="nav-link" href="{{ url_for('learn') }}">Learn</a>
             		</li>
 					{% endif %}
+					{% if current_user.is_admin %}
+					<li class="nav-item">
+						<a class="nav-link" href="{{ url_for('statistics') }}">Statistics</a>
+				  	</li>
+					{% endif %}
             		{% if current_user.is_anonymous %}
 					<li class="nav-item">
 						<a class="nav-link" href="{{ url_for('login') }}">{{ ('Login') }}</a>
