--- a/app/templates/feedback.html
+++ b/app/templates/feedback.html
@@ -1,3 +1,13 @@
 {% extends "base.html" %}
 
-{% block app_content %}{% endblock %}
+{% block app_content %}
+
+    <section>
+        <div class="container text-center">
+            <a href="{{ url_for('learn') }}">
+                <button type="button" class="btn btn-primary btn-lg">Return to Content</button>
+            </a>
+        </div>
+    </section>
+
+{% endblock %}
