--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -1,3 +1,25 @@
 {% extends "base.html" %}
 
-{% block app_content %}{% endblock %}
+{% block app_content %}
+
+<section class="py-3">
+    <div class="container">
+        <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Username</th>
+                <th scope="col">Email</th>
+                <th scope="col">Admin Status</th>
+              </tr>
+            </thead>
+            <tbody>
+                {% for u in users %}
+                <tr><td>{{ u.id }}</td><td>{{ u.username }}</td><td>{{ u.email }}</td><td>{{ u.is_admin }}</td></tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</section>
+
+{% endblock %}
