add functionalities for content

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -4,11 +4,15 @@
 }
 
 .carousel-item {
-    height: 65vh;
-    min-height: 350px;
+    height: 45vh;
+    min-height: 200px;
     background: no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
   }
+
+.Testing_style{
+    color: chartreuse;
+}
