--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -45,14 +45,14 @@
 				<thead>
 					  <tr>
 						<th scope="col">ID</th>
-						<th scope="col">Bracket</th>
+						<th scope="col">Category</th>
 						<th scope="col">Score</th>
 						<th scope="col">Timestamp</th>
 					  </tr>
 				</thead>
 				<tbody>
 					{% for a in attempts %}
-					<tr><td>{{ a.user_id }}</td><td>{{ a.bracket }}</td><td>{{ a.score }}</td><td>{{ a.timestamp }}</td></tr>
+					<tr><td>{{ a.user_id }}</td><td>{{ a.category }}</td><td>{{ a.score }}</td><td>{{ a.timestamp }}</td></tr>
 					{% endfor %}
 				</tbody>
 			</table>
