--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -52,7 +52,7 @@
 				</thead>
 				<tbody>
 					{% for a in attempts %}
-					<tr><td>{{ a.user_id }}</td><td>{{ a.category }}</td><td>{{ a.score }}</td><td>{{ a.timestamp }}</td></tr>
+					<tr><td>{{ a.id }}</td><td>{{ a.category }}</td><td>{{ a.score }}</td><td>{{ a.timestamp }}</td></tr>
 					{% endfor %}
 				</tbody>
 			</table>
