derivatives and crypto

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -57,7 +57,7 @@
 		<div class="container py-5">
 	  		<header class="text-center text-white py-5">
 				{% if not current_user.is_anonymous %}
-				<h1 class="display-4 font-weight-bold mb-4">Welcome to Peaks and Troughs, {{ current_user.username }}!</h1>
+				<h1 class="display-4 font-weight-bold mb-4">Welcome {{ current_user.username }}!</h1>
 				{% else %}
 				<h1 class="display-4 font-weight-bold mb-4">Welcome to Peaks and Troughs!</h1>
 				{% endif %}
