--- a/app/templates/learn.html
+++ b/app/templates/learn.html
@@ -228,7 +228,15 @@
                                     <!-- Derivatives - Image-->
                                     <img class="img-fluid rounded mb-5" src="static/images/content/derivatives.png" alt="Derivatives" style="margin-top: 5%;"/>
                                     <!-- Derivatives - Text-->
-                                    <p class="mb-5 text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5 text-justify">
+                                        Derivatives are securities whose value relies upon the value of another asset, whether a single asset or a group. This means that the price of the derivative changes as the price of the underlying asset fluctuates. Common underlying assets for derivatives are stocks, bonds, commodities, interest rates, and market indexes. A derivative can essentially be seen as a gamble on the underlying asset, without directly having exposure to said asset.
+                                        <br><br>
+                                        Derivatives were a major contributor to the 2008 financial crisis due to their largely unregulated nature, as they are traded between two parties, and there is a risk that one side of the trade might default. Mortgage-backed securities are a good example of where investors bet on the stability of the housing market, with the underlying security being home loan mortgages. Another contributor to the financial crisis were banks selling derivatives where the underlying asset were other derivatives.
+                                        <br><br>
+                                        Derivatives have many legitimate uses apart from crashing the financial markets. They are often used to hedge positions, that is, if I have exposure to an asset price increasing, I buy a derivative to bet the asset price decreases so I minimise my risk exposure to that asset. This is common for currencies, where international companies that do business across the globe in local currencies use derivatives to hedge their risk that the local currency changes.
+                                        <br><br>
+                                        Common types of derivatives are futures (buying and receiving an asset in the future), forwards (similar to futures but only traded between people not on an exchange), swaps (exchange one type of cash flow for another), and options (an agreement to potentially buy an asset in the future).
+                                    </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-check fa-fw"></i>
                                         Done
@@ -254,11 +262,13 @@
                                     <img class="img-fluid rounded mb-5" src="static/images/content/cryptocurrency.png" alt="Cryptocurrency" style="margin-top: 5%;"/>
                                     <!-- Cryptocurrency - Text-->
                                     <p class="mb-5 text-justify">
-                                        Cryptocurrencies are a type of digital currency that are generated from code. They use a blockchain to keep an immutable record of all of the past transactions, which is called a distributed ledger. Cryptocurrencies were originally created to be an alternative to fiat currency (the cash that is in your wallet), however the volatile nature of their value has stopped that from happening. This can be easist seen with the most well-known cryptocurrency, Bitcoin, which was created in 2009 and continues to have price fluctuations.
+                                        Cryptocurrencies are a type of digital currency that are generated from code. They use a blockchain to keep an immutable record of all of the past transactions, which is called a distributed ledger. Cryptocurrencies were originally created to be an alternative to fiat currency (the cash that is in your wallet), however the volatile nature of their value has stopped that from happening. This can be easiest seen with the most well-known cryptocurrency, Bitcoin, which was created in 2009 and continues to have price fluctuations.
                                         <br><br>
-                                        Another main cryptocurrency, Ethereum, contains more information on its blockchain, which can be used to execute smart contracts. Ethereum is currently the second largest cryptocurrency behind Bitcoin, and is the foundation for the latest craze, Non-Fungible Tokens or NFT. NFT's are embedded in the Ethereum blockchain and are seen as the digital equivalent to art, where the token you buy is the 'original'.
+                                        Another main cryptocurrency, Ethereum, contains more information on its blockchain, which can be used to execute smart contracts. Ethereum is currently the second largest cryptocurrency behind Bitcoin, and is the foundation for the latest craze, Non-Fungible Tokens or NFT. NFT's are embedded in the Ethereum blockchain and are seen as the digital equivalent to art, where the token you buy is the 'original'. Check out the <a href="https://foundation.app/NyanCat/nyan-cat-219" target="_blank">Nyan Cat</a> as an example of an NFT.
                                         <br><br>
-                                        As cryptocurrencies are based in cryptography and mathemathics, they require increasingly difficult problems to be solved to validate new transactions on the blockchain. The miners that do this validation are turning to high-end computers and specialised equipment to be the first to solve each new puzzle, and be rewarded with the cryptocurrency for doing so. A major envioronmental concern is that the mining activities of cryptocurrencies are a significant contributor to climate change due to the eletricity used to power the process.
+                                        As cryptocurrencies are based in cryptography and mathematics, they require increasingly difficult problems to be solved to validate new transactions on the blockchain. The miners that do this validation are turning to high-end computers and specialised equipment to be the first to solve each new puzzle, and be rewarded with the cryptocurrency for doing so. A major environmental concern is that the mining activities of cryptocurrencies are a significant contributor to climate change due to the electricity used to power the process.
+                                        <br><br>
+                                        The use of cryptocurrencies has been turbulent. The original miners were generating thousands of Bitcoins and the price was next to nothing. The first commercial transaction was 10,000 Bitcoin for 2 pizza's, coins that would be worth hundreds of millions today. Then there are the stories of lost wallets, the devices that store cryptocurrencies, where thousands of coins are stashed behind passwords no one can remember. Who knows where the future of Bitcoin and cryptocurrencies will go, some say to zero, others to the moon.
                                     </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-check fa-fw"></i>
@@ -309,7 +319,9 @@
                                     <!-- Bond - Image-->
                                     <img class="img-fluid rounded mb-5" src="static/images/content/stock.jpeg" alt="..." style="margin-top: 5%;"/>
                                     <!-- Bond - Text-->
-                                    <p class="mb-5 text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5 text-justify">
+                                        COMMING SOON!
+                                    </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-check fa-fw"></i>
                                         Done
@@ -334,7 +346,9 @@
                                     <!-- Cash - Image-->
                                     <img class="img-fluid rounded mb-5" src="static/images/content/cash.png" alt="Cash" style="margin-top: 5%;"/>
                                     <!-- Cash - Text-->
-                                    <p class="mb-5 text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5 text-justify">
+                                        COMMING SOON!
+                                    </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-check fa-fw"></i>
                                         Done
@@ -359,7 +373,9 @@
                                     <!-- Art - Image-->
                                     <img class="img-fluid rounded mb-5" src="static/images/content/stock.jpeg" alt="..." style="margin-top: 5%;"/>
                                     <!-- Art - Text-->
-                                    <p class="mb-5 text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5 text-justify">
+                                        COMMING SOON!
+                                    </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-check fa-fw"></i>
                                         Done
@@ -384,7 +400,9 @@
                                     <!-- Realestate - Image-->
                                     <img class="img-fluid rounded mb-5" src="static/images/content/stock.jpeg" alt="..." style="margin-top: 5%;"/>
                                     <!-- Realestate - Text-->
-                                    <p class="mb-5 text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5 text-justify">
+                                        COMMING SOON!
+                                    </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-check fa-fw"></i>
                                         Done
